# docker-resolver

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docker_resolver/: main.py  resolv.py
